--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "json-server": "^1.0.0-alpha.23",
+    "sweetalert": "^2.1.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
