--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sweetalert": "^2.1.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
+    "vue3-cookies": "^1.0.6",
     "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
