added qr library

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flatpickr": "^4.6.13",
     "json-server": "^1.0.0-alpha.23",
     "pinia": "^2.1.7",
+    "qrcode.vue": "^3.4.1",
     "sweetalert": "^2.1.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
